# chocs-aws-xray

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yaml  release.yml
chocs_middleware/xray/: __init__.py  middleware.py
examples/: simple_integration.py
tests/fixtures/: __init__.py  xray_recorder_mock.py
tests/xray/: test_middleware.py
