[tool.poetry]
name = "chocs_middleware.xray"
version = "1.0.0"
description = "Middleware to integrate aws x-ray with chocs."
authors = [
    "Dawid Kraczkowski <dawid.kraczkowski@gmail.com>",
    "Aidan Currah <aidancurrah@gmail.com>"
]
license = "MIT"
readme = "README.md"
packages = [
  { include = "chocs_middleware" }
]
homepage = "https://github.com/kodemore/chocs-aws-xray"
repository = "https://github.com/kodemore/chocs-aws-xray"
documentation = "https://github.com/kodemore/chocs-aws-xray"

keywords = ["aws", "x-ray", "chocs", "http", "middleware"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

# Requirements
[tool.poetry.dependencies]
python = "^3.8"
chocs = "^1.0.0"
aws-xray-sdk = "^2.9.0"

[tool.poetry.dev-dependencies]
pytest = "^4.1.0"
pytest-cov = "^2.5"
black = "21.10b0"
isort = "^5.6.4"
mypy = "^0.812"
pylint = "^2.7.2"
